# applet-window-appmenu

./: CHANGELOG.md  CMakeLists.txt  D16715.diff  INSTALLATION.md  README.md  config-appmenu.h.cmake  install.sh  uninstall.sh
lib/: CMakeLists.txt  appmenuapplet.cpp  appmenuapplet.h  decorationpalette.cpp  decorationpalette.h
package/: metadata.desktop  metadata.json
package/contents/code/: util.js
package/contents/config/: config.qml  main.xml
package/contents/ui/: Broadcaster.qml  CustomLabel.qml  FlickableIndicators.qml  LatteWindowsTracker.qml  MenuFlickable.qml  PaintedToolButton.qml  PlasmaTasksModel.qml  configGeneral.qml  main.qml
package/contents/ui/config/: ColorsComboBox.qml  ConfigGeneral.qml
plugin/: CMakeLists.txt  appmenumodel.cpp  appmenumodel.h  appmenuplugin.cpp  appmenuplugin.h  commontools.cpp  commontools.h  qmldir  schemecolors.cpp  schemecolors.h  schemesmodel.cpp  schemesmodel.h
plugin/libdbusmenuqt/: CMakeLists.txt  README  com.canonical.dbusmenu.xml  dbusmenuimporter.cpp  dbusmenuimporter.h  dbusmenushortcut_p.cpp  dbusmenushortcut_p.h  dbusmenutypes_p.cpp  dbusmenutypes_p.h  utils.cpp  utils_p.h
plugin/libdbusmenuqt/test/: CMakeLists.txt  README  main.cpp
plugin/wm/: abstractwindowmanager.cpp  abstractwindowmanager.h  genericwindowmanager.cpp  genericwindowmanager.h  waylandwindowmanager.cpp  waylandwindowmanager.h  x11fallbackwindowmanager.cpp  x11fallbackwindowmanager.h
